--- a/BE_MINE/src/index.html
+++ b/BE_MINE/src/index.html
@@ -2,11 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>Be MINE <3!</title>
     <link rel="stylesheet" href="index.css" />
+
+    
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-  </body>
+    <h1>💖 Be Mine 💖</h1>
+    <p>You have (1) new mail...</p>
+    <!-- Buttons -->
+     <button id="startBtn" class="button is-primary">MAIL (!)</button>
+     <script defer src="render.js"></script>
+    </body>
 </html>
